# claude-nexus

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
agents/: click-dev.md
docs/PRDs/: PRD_ADDITIONAL_FEATURES.md  PRD_MR_REVIEWER.md  PRD_RELEASE_AGENT.md  PRD_TICKET_MANAGER.md
docs/architecture/: ARCHITECTURE.md  MIGRATION_PLAN.md
nexus/: __init__.py  __version__.py  cli.py
nexus/core/: __init__.py  capabilities.py  config.py  exceptions.py  formatting.py  interfaces.py  registry.py  selector.py  validation.py
tests/: __init__.py  conftest.py
tests/fixtures/: mock_implementations.py
tests/test_core/: __init__.py  test_config.py  test_registry.py  test_selector.py
